--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html>
 <head>
     <title>Hangman</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="images/favicon.png">
 </head>
 <body>
     <div id="container">
         <h1>Hangman Game</h1>
         <!-- <p id="remainingGuesses"></p> -->
-        <p id="puzzle"></p>
+        <div id="puzzle" class="puzzle"></div>
         <p id="statusMessage"></p>
-        <button id="reset">Reset Game</button>
+        <button id="reset" class="button">Reset Game</button>
     </div>
     
-    <script src="helpers.js"></script>
-    <script src="requests.js"></script>
-    <script src="hangman.js"></script>
-    <script src="app.js"></script>
+    <script src="scripts/helpers.js"></script>
+    <script src="scripts/requests.js"></script>
+    <script src="scripts/hangman.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
