--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <!-- <p id="remainingGuesses"></p> -->
         <div id="puzzle" class="puzzle"></div>
         <p id="statusMessage"></p>
-        <button id="reset" class="button">Reset Game</button>
+        <div id="reset-button">
+            <button id="reset" class="button">Reset Game</button>
+        </div>
     </div>
     
     <script src="scripts/helpers.js"></script>
