Trying to add a field that non guessed letter will append

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
             </div>
             <div class="puzzle" id="puzzle"></div>
             <p class="statusMessage" id="statusMessage"></p>
+            <p class="non-exist-letters"></p>
             <div class="reset-button" id="reset-button">
                 <button id="reset" class="button">Reset Game</button>
             </div>
